# tensorflow

./: Jenkinsfile  build-tensorflow.sh  build.sh  git_mqt  git_mqt.pub
debian-base/: Dockerfile
debian-tensorflow/: Dockerfile
debian-tensorflow/label_image/: CMakeLists.txt  README  label_image.cpp
debian-tf-base/: Dockerfile  build_all_linux.sh
debian-tf-build/: .tf_configure.bazelrc  Dockerfile  build_all_linux.sh
